docs(offlineviewer): update style to avoid scrollbars when embedded as iframe

--- a/Examples/Applications/OfflineLocalView/viewer.module.css
+++ b/Examples/Applications/OfflineLocalView/viewer.module.css
@@ -49,3 +49,11 @@
   border-radius: 10px;
   user-select: none;
 }
+
+body {
+  margin: 0;
+}
+
+html { 
+  overflow: hidden; 
+}
